; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zvol_os.c_zvol_is_zvol_impl.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zvol_os.c_zvol_is_zvol_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.block_device = type { i32 }

@B_FALSE = common dso_local global i32 0, align 4
@zvol_major = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @zvol_is_zvol_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zvol_is_zvol_impl(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.block_device*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call %struct.block_device* @vdev_lookup_bdev(i8* %6)
  store %struct.block_device* %7, %struct.block_device** %4, align 8
  %8 = load %struct.block_device*, %struct.block_device** %4, align 8
  %9 = call i64 @IS_ERR(%struct.block_device* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @B_FALSE, align 4
  store i32 %12, i32* %2, align 4
  br label %27

13:                                               ; preds = %1
  %14 = load %struct.block_device*, %struct.block_device** %4, align 8
  %15 = getelementptr inbounds %struct.block_device, %struct.block_device* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @MAJOR(i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load %struct.block_device*, %struct.block_device** %4, align 8
  %19 = call i32 @bdput(%struct.block_device* %18)
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @zvol_major, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %25

23:                                               ; preds = %13
  %24 = load i32, i32* @B_TRUE, align 4
  store i32 %24, i32* %2, align 4
  br label %27

25:                                               ; preds = %13
  %26 = load i32, i32* @B_FALSE, align 4
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %25, %23, %11
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local %struct.block_device* @vdev_lookup_bdev(i8*) #1

declare dso_local i64 @IS_ERR(%struct.block_device*) #1

declare dso_local i32 @MAJOR(i32) #1

declare dso_local i32 @bdput(%struct.block_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
